Add null validation to methods and tests